<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.ide.vscode</groupId>
	<artifactId>commons-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.41.0-SNAPSHOT</version>
	<name>commons-parent</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.3</version>
		<relativePath></relativePath>
	</parent>

	<modules>
		<module>org.json</module>
		<module>commons-language-server</module>
		<module>commons-lsp-extensions</module>
		<module>language-server-test-harness</module>
		<module>commons-yaml</module>
		<module>commons-util</module>
		<module>commons-java</module>
		<module>java-properties</module>
		<module>commons-cf</module>
		<module>commons-maven</module>
		<module>commons-gradle</module>
		<module>commons-rewrite</module>
		<module>language-server-starter</module>
	</modules>

	<repositories>
		<repository>
			<id>lsp4j-snapshots-repo</id>
			<name>lsp4j-snapshots-repo</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/org/eclipse/lsp4j/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-releases</id>
			<name>Spring Releases</name>
			<url>https://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<name>Sonatype OSS Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-snapshots</id>
			<url>https://repo.spring.io/snapshot</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestones</id>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit-version>4.13.1</junit-version>
		<assertj-version>3.5.2</assertj-version>
		<slf4j-version>1.7.25</slf4j-version>
		<guava-version>31.1-jre</guava-version>
		<mockito-version>1.10.19</mockito-version>
		<jackson-2-version>2.5.0</jackson-2-version>
		<jersey-2-version>2.10</jersey-2-version>
		<lsp4j-version>0.17.0</lsp4j-version>
		<!-- NOTE: Reactor version must match version used by the CF client -->
		<cloudfoundry-client-version>3.8.0.RELEASE</cloudfoundry-client-version>
		<reactor-version>3.3.11.RELEASE</reactor-version>
		<reactor-netty>0.7.5.RELEASE</reactor-netty>
		<commons-io-version>2.4</commons-io-version>
		<commons-codec-version>1.13</commons-codec-version>

		<!-- Rewrite specific properties -->
		<rewrite-version>7.33.0-SNAPSHOT</rewrite-version>
		<rewrite-spring-version>4.30.0-SNAPSHOT</rewrite-spring-version>
		<rewrite-java-migration.version>1.14.0-SNAPSHOT</rewrite-java-migration.version>

		<signing.skip>true</signing.skip>
		<signing.alias>vmware</signing.alias>
	</properties>

	<build>
		<plugins>
			<!-- Set source 1.8 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>${signing.skip}</skip>
					<alias>${signing.alias}</alias>
					<keystore>${signing.keystore}</keystore>
					<storetype>${signing.storetype}</storetype>
					<storepass>${signing.store.password}</storepass>
					<keypass>${signing.key.password}</keypass>
					<!-- <tsa>http://sha256timestamp.ws.symantec.com/sha256/timestamp</tsa> -->
					<tsa>http://timestamp.digicert.com</tsa>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration combine.self="append">
					<argLine>--add-opens app/app=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
	
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>bamboo-signing</id>
			<properties>
				<signing.store.password>${env.bamboo_vault_signing_passphrase}</signing.store.password>
				<signing.key.password>${env.bamboo_vault_signing_passphrase}</signing.key.password>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-version}</version>
		</dependency>
		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-simple</artifactId> 
			<version>${slf4j-version}</version> </dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj-version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
